@startuml
package Parsers {
    class Node
    Node : parent: Node
    Node : parents: Node[]
    Node : select(css: str): Node
    Node : get_depth(): int
    Node : generate_selectors(): gen[str]
    Node : generate_path_selectors(): gen[str]
    Node : ? find_all(item): Match

    class Page
    Page : {static} from_html(html: str)

    Node <|-- Page
}

class Selector
Selector : select_one(node: Node)
Selector : select_all(node: Node)
Selector -> Node

class CSSRuleSelector

Selector <|-- CSSRuleSelector

package Samples {
    class TrainingSet
    TrainingSet : item

    class Item
    Item : samples

    class Sample
    Sample : page
    Sample : value
    Sample : get_matches()

    class DictItem
    DictItem : item_by_key: Dict[str, Sample]

    class ListItem
    ListItem : item: Item

    class ValueItem
    ValueItem : values: str[]
}
Item --> Sample
TrainingSet --> Item
Item <|-- DictItem
Item <|-- ListItem
Item <|-- ValueItem

Sample --> Page

package Matches{
    class Match
    Match : get_span(): int
    Match : get_root_node(): Node

    class DictMatch
    DictMatch : match_by_key
    DictMatch --> Match

    class ListMatch
    ListMatch : matches
    ListMatch --> Match

    class ValueMatch
    ValueMatch : node
    ValueMatch : extractor
}

Match ---> Node : root

ValueMatch ---> Node

Match <|-- DictMatch
Match <|-- ListMatch
Match <|-- ValueMatch

Sample ---> Match

package Scrapers {
    class Scraper
    Scraper : train(matches: Match[], roots: Node[])
    Scraper : get(node: Node)

    class DictScraper
    DictScraper : scraper_by_key: Dict[str, Scraper]
    DictScraper --> Scraper

    class ListScraper
    ListScraper : selector
    ListScraper : scraper
    ListScraper --> Scraper

    class ValueScraper
    ValueScraper : selector
    ValueScraper : extractor
}

ValueScraper ---> Selector
ListScraper ---> Selector

class ValueExtractor
ValueExtractor : get(node: Node)

class AttributeExtractor
AttributeExtractor : attr

class TextExtractor

Scraper <|-- DictScraper
Scraper <|-- ListScraper
Scraper <|-- ValueScraper
ValueScraper ---> ValueExtractor

ValueExtractor <|--  AttributeExtractor
ValueExtractor <|--  TextExtractor

ValueMatch --> ValueExtractor


@enduml